lib/translator/test/fixtures/error/raw/from-wrong-step-type.prg
PROGRAM wrong_step_data_type
BEGIN
    FROM INT i = 0 TO 3 STEP 1.0
    END
END
